--- a/src/app/styles/recados.css
+++ b/src/app/styles/recados.css
@@ -1,4 +1,7 @@
-/* Seção de Recados */
+:root {
+    --title-font-family: "Tangerine", cursive;
+}
+
 #recados {
     padding: 50px 20px;
     background-color: #f9f9f9;
@@ -15,7 +18,7 @@
     margin-bottom: 20px;
     font-size: 30px;
     font-weight: bold;
-    font-family: 'Playfair Display', serif; /* Fonte clássica */
+    font-family: var(--title-font-family);
 }
 
 #recados p {
@@ -23,7 +26,7 @@
     margin-bottom: 20px;
     color: #666;
     line-height: 1.6;
-    font-family: 'Lora', serif; /* Estilo mais refinado */
+    font-family: var(--title-font-family);
 }
 
 #recados textarea {
