--- a/src/app/home.html
+++ b/src/app/home.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/dress-code.css">    
     <link rel="stylesheet" href="styles/recados.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tangerine:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
@@ -87,8 +88,8 @@
     
     <!-- Seção de Confirmação -->
     <section id="confirmacao">
-        <h1>Confirme sua Presença</h1>
-        <p>Estamos contando os dias para este grande momento, e sua presença é muito importante para nós! 
+        <h1>Confirme sua presença</h1>
+        <p class="confirmacao-p">Estamos contando os dias para este grande momento, e sua presença é muito importante para nós! 
             Por favor, confirme se conseguirá comparecer para garantirmos que teremos tudo excelente para lhe receber neste dia especial.
         </p>
 
@@ -120,7 +121,7 @@
 
     <!-- Seção de Presentes -->
     <section id="presentes">
-        <h1>Nossa Lista de Presentes</h1>
+        <h1>Nossa lista de presentes</h1>
         <p>Aqui você pode nos presentear, tanto no Magalu quanto aqui nos fazendo PIX. <strong>Se for comprar fora
                 desses sites, por favor nos avise.</strong></p>
         <a href="https://www.finalfeliz.de/filipe-querino-nathielly-jorge" target="_blank" class="botao-presente">Compre na Magalu</a>
@@ -142,7 +143,7 @@
 
     <!-- Seção Localização -->
     <section id="localizacao">
-        <h1>Veja Onde Vamos Dizer Sim</h1>
+        <h1>Veja onde vamos dizer SIM</h1>
         <p>O casamento será realizado em um
             local incrível, e você pode conferir os detalhes abaixo.</p>
 
@@ -166,7 +167,7 @@
 
     <!-- Seção Dress Code -->
     <section id="dress-code">
-        <h1>Dress Code - O Que Vestir</h1>
+        <h1>Dress Code - O que vestir</h1>
         <p>Para o grande dia, escolha sua melhor roupa e esteja confortável para celebrar conosco! Lembre-se: <span class="destaque">Branco é exclusivo da noiva!</span></p>
         
         <div class="galeria">
@@ -177,7 +178,7 @@
 
     <!-- Seção de Recados -->
     <section id="recados">
-        <h1>Deixe um Recado para os Noivos</h1>
+        <h1>Deixe um ecado para os noivos</h1>
         <p>Aqui você pode nos deixar um recado com palavras de carinho e amor. Ficaremos felizes em ler todas as mensagens especiais enviadas por vocês!</p>
         <textarea id="mensagem" placeholder="Escreva seu recado aqui..." required></textarea>
         <button type="button" id="enviar-recado">
