--- a/src/app/styles/confirmacao.css
+++ b/src/app/styles/confirmacao.css
@@ -1,4 +1,9 @@
-/* Seção de Confirmação */
+:root {
+    --title-font-family: "Tangerine", cursive;
+    --title-font-family-2: "Montserrat", sans-serif;
+}
+
+
 #confirmacao {
     padding: 60px 20px;
     background-color: #fff;
@@ -12,6 +17,10 @@
 #confirmacao h1 {
     color: rgb(48, 63, 22);
     margin-bottom: 20px;
+}
+
+#confirmacao p {
+    font-family: var(--title-font-family-2);
 }
 
 #rsvp-form input[type="text"] {
