--- a/src/app/styles/dress-code.css
+++ b/src/app/styles/dress-code.css
@@ -1,4 +1,8 @@
-/* Seção de Dress Code */
+:root {
+    --title-font-family: "Tangerine", cursive;
+    --title-font-family-2: "Montserrat", sans-serif;
+}
+
 #dress-code {
     padding: 60px 20px;
     background-color: #fdfdfd;
@@ -10,6 +14,7 @@
 }
 
 #dress-code h1 {
+    font-family: var(--title-font-family);
     font-size: 28px;
     font-weight: 600;
     color: rgb(48, 63, 22);
