--- a/src/app/styles/presente.css
+++ b/src/app/styles/presente.css
@@ -1,3 +1,12 @@
+:root {
+    --title-font-family: "Tangerine", cursive;
+    --title-font-family-2: "Montserrat", sans-serif;
+}
+
+#localizacao p {
+    font-family: var(--title-font-family-2);
+}
+
 .product-card {
     background-color: white;
     padding: 60px 20px;
