Ajuste nos tamanho da letras

--- a/src/app/styles/mapa.css
+++ b/src/app/styles/mapa.css
@@ -7,6 +7,10 @@
     font-family: var(--title-font-family-2);
 }
 
+#presentes h {
+    font-size: 40px;
+}
+
 .map-container {
     position: relative;
     width: 100%;
