--- a/src/app/home.html
+++ b/src/app/home.html
@@ -143,7 +143,7 @@
 
     <!-- Seção Localização -->
     <section id="localizacao">
-        <h1>Veja onde vamos dizer SIM</h1>
+        <h1>Veja onde vamos dizer sim</h1>
         <p>O casamento será realizado em um
             local incrível, e você pode conferir os detalhes abaixo.</p>
 
