--- a/src/app/styles/presente.css
+++ b/src/app/styles/presente.css
@@ -34,6 +34,7 @@
 }
 
 .product-description {
+    font-family: var(--title-font-family-2);
     font-size: 16px;
     color: #666;
     margin-bottom: 15px;
