--- a/src/app/styles/presente.css
+++ b/src/app/styles/presente.css
@@ -12,6 +12,7 @@
 }
 
 .product-card {
+    font-family: var(--title-font-family-2);
     background-color: white;
     padding: 60px 20px;
     border-radius: 8px;
