ajustado descrição do formato

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -110,7 +110,7 @@
                     <p>Informe o seu número de celular para futuras confirmações.</p>
                     <input type="tel" id="phone" placeholder="Seu número de celular"
                             pattern="(\(\d{2}\)\s?)?\d{4,5}-?\d{4}" 
-                            title="Formatos aceitos: (48) 99619-3227, 48996193227 ou 996193227">
+                            title="Formatos aceitos: (48) 99619-3227 ou 996193227">
                 </div>
             
                 <button type="submit">Confirmar Presença</button>
