ajustado texto de recado

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -179,7 +179,7 @@
 
     <!-- Seção de Recados -->
     <section id="recados">
-        <h1>Deixe um ecado para os noivos</h1>
+        <h1>Deixe um recado para os noivos</h1>
         <p>Aqui você pode nos deixar um recado com palavras de carinho e amor. Ficaremos felizes em ler todas as mensagens especiais enviadas por vocês!</p>
         <textarea id="mensagem" placeholder="Escreva seu recado aqui..." required></textarea>
         <button type="button" id="enviar-recado">
