--- a/src/app/index.html
+++ b/src/app/index.html
@@ -23,7 +23,9 @@
             <i class="far fa-envelope"></i>
         </a>
     </div>
-    <div class="footer-img"></div>
+    <div class="footer-img">
+        <!-- <img src="assets/mato.png" alt="Look 2 - Estilo Social para Casamento"> -->
+    </div>
 </body>
 
 </html>
