--- a/src/app/home.html
+++ b/src/app/home.html
@@ -123,9 +123,11 @@
     <!-- Seção de Presentes -->
     <section id="presentes">
         <h1>Nossa lista de presentes</h1>
-        <p>Aqui você pode nos presentear, tanto no Magalu quanto aqui nos fazendo PIX. <strong>Se for comprar fora
-                desses sites, por favor nos avise.</strong></p>
+        <p>Aqui você pode nos presentear comprando na Magalu, na Havan ou nos fazendo um PIX. 
+           <strong>Se preferir adquirir algo fora dessas opções, por favor, nos avise.</strong>
+        </p>
         <a href="https://www.finalfeliz.de/filipe-querino-nathielly-jorge" target="_blank" class="botao-presente">Compre na Magalu</a>
+        <a href="https://lista.havan.com.br/Convidado/ItensListaPresente/787630" target="_blank" class="botao-presente">Compre na Havan</a>
 
         <div id="product-list" class="produtos-lista">
             <!-- Os produtos do JSON serão carregados aqui dinamicamente -->
